# lrv

./: .gitignore  .prettierignore  .prettierrc.json  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  RELEASE_CHECKLIST.md  THIRD_PARTY_NOTICES.md  TODO.md  build.rs  eslint.config.cjs  fix-tests.sh  justfile  lrv-show.sh  package-lock.json  package.json  rolldown.config.mjs  tsconfig.web.json
.claude/skills/lrv/: SKILL.md
.github/workflows/: ci.yml  release.yml
bench-results/: HEAD.json
docs/: VENDORED_ASSETS.md  perf-e2e.md
e2e/: README.md  package-lock.json  package.json  playwright.config.ts  setup-test-repo.sh  tsconfig.json
e2e/perf-batch-runs/: perf-init-run-1.json  perf-init-run-10.json  perf-init-run-2.json  perf-init-run-3.json  perf-init-run-4.json  perf-init-run-5.json  perf-init-run-6.json  perf-init-run-7.json  perf-init-run-8.json  perf-init-run-9.json
e2e/tests/: font.spec.ts  perf.spec.ts  review-workflow.spec.ts  series.spec.ts  theme.spec.ts
scripts/: bench.sh  check-offline.sh  e2e-perf-batch.sh  e2e-perf-init.sh  e2e-perf-loop.sh  serve-current.sh  serve-public.sh  vendor-fonts.sh  vendor-monaco.sh
src/: config.rs  diff.rs  github.rs  lib.rs  main.rs  netutil.rs  output.rs  phab_mcp.rs  phabricator.rs  server.rs  skill.md  themes.rs  types.rs
tests/: api_test.rs  bench_series_precompute.rs  config_test.rs  context_title_test.rs  csp_test.rs  diff_parser_test.rs  file_api_test.rs  jj_file_api_test.rs  output_test.rs  server_test.rs  tailscale_test.rs  types_test.rs
web/: TODO-typescript-migration.md
web/assets/: README.md  app.css  app.js  fox-schematic.html  preloader-eye.html  preloader-eye.js  preloader.html  preloader.js
web/assets/app/: api.js  comments-ui-methods.js  comments.js  commit-methods.js  dialog-methods.js  diff-utils.js  dom.js  file-data-methods.js  file-editor-methods.js  file-list-methods.js  file-loading-methods.js  font.js  language.js  main.js  modal.js  monaco-app.js  navigation-methods.js  perf.js  shortcuts.js  themes.js  ui-signals.js
web/src/: api.ts  comment-draft-storage.ts  comments-ui-methods.ts  comments.ts  commit-methods.ts  config.ts  dialog-methods.ts  diff-utils.ts  dom.ts  file-data-methods.ts  file-list-methods.ts  file-loading-methods.ts  font.ts  language.ts  linkify.ts  main.ts  modal.ts  monaco-app.ts  navigation-methods.ts  perf.ts  platform.ts  review-note-methods.ts  review-notes.ts  series-methods.ts  shortcuts.ts  stacked-view-methods.ts  themes.ts  ui-signals.ts
web/src/types/: app.ts  globals.d.ts  monaco.d.ts
