[package]
name = "lrv"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
rust-embed = "8.0"
open = "5.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.8"
dirs = "5.0"
mime_guess = "2.0"

[dev-dependencies]
tower = "0.5"
